         * checking and updating Variable/XPDLString/I18n variable ids inside BeanShell/JavaScript script expression
         * checking and updating I18n variable ids inside InitialValue expression
         * showing text panel instead of editable combo-box for i18n variables
         * not showing system variables/variables/xpdl strings/i18n variables for XSLT tool agent Application definition
      - Fixed:
         * bug that occured sometime when updating i18n varible Id in referencing elements
         * bug that showed email panel in edit mode even in the case package is external or transient

2015-08-10 Sasa Bojanic <sasaboy@together.at>
   # Now validating unused applications and participants

2015-08-03 Sasa Bojanic <sasaboy@together.at>
   # Now configuring JSplitPane's divider positions (MainDividerLocation, FirstSmallDividerLocation and SecondSmallDividerLocation properties) in percentage (not in an absolute values)
   # Shark mode:
      - support for AUTO_COMPLETION extended attribute for manual activities
      - improved performance and accuracy when moving entries for the Activity's 'Web client configuration->Default GUI->Variables'

2015-07-31 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - allowing i18n variables to be used when creating variables' InitialValue expression
      
2015-07-27 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - implemented i18n variable support
      - supported insertion of system variable name/description/translation and process variable name/description when defining XPDL string or email subject/content

2015-07-15 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - Added additional constants for i18n support

2015-06-08 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - Improved support to TXWToolAgent

2015-06-03 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - BeanShell and JavaScript tool agent are now allowed to use any process variable
